--- a/scss/actor-sheet.scss
+++ b/scss/actor-sheet.scss
@@ -1,5 +1,8 @@
 .l5r4.pc,
 .l5r4.npc {
+  /* CSS custom property for conditional cursor behavior */
+  --conditional-cursor: default;
+  
   display: flex;
   flex-direction: column;
 
@@ -121,7 +124,7 @@
         align-items: center;
         background: rgba(0, 0, 0, 0.4);
         border-radius: 50%;
-        cursor: pointer;
+        cursor: var(--conditional-cursor);
         display: inline-flex;
         height: 32px;
         justify-content: center;
@@ -228,7 +231,7 @@
 .l5r4.pc {
   .actor-img {
     align-items: center;
-    cursor: pointer;
+    cursor: var(--conditional-cursor);
     display: flex;
     height: 240px;
     justify-content: center;
@@ -245,7 +248,7 @@
 
 .l5r4.npc {
   .actor-img {
-    cursor: pointer;
+    cursor: var(--conditional-cursor);
     height: 210px;
     max-width: 210px;
     min-width: 210px;
