--- a/scss/actor/ranks.scss
+++ b/scss/actor/ranks.scss
@@ -11,7 +11,7 @@
     background: var(--table-header-bg-color);
     border: 1px solid var(--table-header-border-color);
     color: var(--table-header-text-color);
-    cursor: pointer;
+    cursor: var(--conditional-cursor);
     display: flex;
     font-size: var(--font-size-16);
     padding: 0.25rem 0;
