--- a/scss/l5r4.scss
+++ b/scss/l5r4.scss
@@ -14,5 +14,6 @@
 // Sheets Item
 @use "./item-sheet.scss";
 
-// XP Manager
+// Apps
+@use "./apps/wound-config.scss";
 @use "./apps/xp-manager.scss";
