--- a/scss/actor/stats.scss
+++ b/scss/actor/stats.scss
@@ -344,7 +344,7 @@
 
     .void-points-dots {
       align-items: center;
-      cursor: var(--conditional-cursor);
+      cursor: pointer;
       display: flex;
       gap: 2px;
     }
