feat: implement fear system for NPCs
- Add fear service with rating calculation and effects
- Add fear tracking to actor data model
- Integrate fear UI in NPC sheet
- Add fear-related localization strings
- Include fear partial template
- Clean up duplicate icon assets
- Add research documentation for review findings

--- a/templates/actor/npc.hbs
+++ b/templates/actor/npc.hbs
@@ -6,6 +6,9 @@
       {{> "systems/l5r4/templates/actor/_partials/_initiative.hbs"}}
       {{> "systems/l5r4/templates/actor/_partials/_armor.hbs"}}
       {{> "systems/l5r4/templates/actor/_partials/_wounds.hbs"}}
+      {{> "systems/l5r4/templates/actor/_partials/_fear.hbs"}}
+
+
     </div>
   </div>
 </form>
