refactor(fear): simplify Fear mechanics and remove active effects
- Removed fear/terrifying type distinction, using only Fear Rank

- Removed automatic Dazed/Stunned active effects application

- Added TODO for future Fear penalty tracking system

- Improved JSDoc documentation and examples

- Simplified UI by removing type selector

- Added effect info display in chat output

--- a/templates/chat/simple-roll.hbs
+++ b/templates/chat/simple-roll.hbs
@@ -22,6 +22,11 @@
       {{/if}}
     </div>
   {{/if}}
+  {{#if effectInfo}}
+    <div class="effect-applied">
+      <strong>{{localize "l5r4.ui.common.effect"}}:</strong> {{effectInfo}}
+    </div>
+  {{/if}}
   {{#if weaponData}}
     <button class="l5r4-damage-button" 
             data-weapon-id="{{weaponData.id}}" 
